[project]
name = "tsfmproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kage08", email = "harshavardhan864.hk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.1.0",
    "einshape>=1.0",
    "huggingface-hub>=0.26.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "utilsforecast>=0.2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
    "wandb>=0.18.5",
]
