[project]
name = "samay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "kage08", email = "harshavardhan864.hk@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.1.0",
    "datasets>=3.2.0",
    "einshape>=1.0",
    "gluonts>=0.16.0",
    "huggingface-hub>=0.26.2",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "transformers>=4.47.0",
    "typer-config>=1.4.2",
    "typer>=0.15.1",
    "utilsforecast>=0.2.7",
    "datasets>=3.2.0",
    "chronos-forecasting>=1.4.1",
    "tensorboardx>=2.6.2.2",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "jax>=0.5.3",
    "jaxtyping>=0.3.0",
    "torchvision>=0.20.1",
    "lightning>=2.5.1",
    "plotly>=6.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
    "wandb>=0.18.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/samay", "src/uni2ts"]
